--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,60 @@
 @string{jour={Journal}}
 @string{pre={Pre-print}}
 
+@INPROCEEDINGS{Autenrieb2025-st2,
+author      = {Autenrieb, Johannes and Gruhn, Patrick},
+title       = {A Quasi-LPV Approach for Gain Scheduling Cascaded NDI-Based Controllers for Hypersonic Glide Vehicles},
+booktitle   = {AIAA SCITECH 2025 Forum},
+year        = {2025},
+month       = {jan},
+bibtex_show={true},
+abbr=conf,
+chapter     = {},
+pages       = {},
+doi         = {10.2514/6.2025-1908},
+html      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-1908},
+selected={false},
+url         = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-1908},
+eprint      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-1908},
+preview     = {}
+}
+
+@INPROCEEDINGS{Autenrieb2025-st1,
+author      = {Autenrieb, Johannes and Gruhn, Patrick},
+title       = {An Iterative Control Allocation Algorithm for Hypersonic Glide Vehicles with Asymmetric Magnitude and Rate Limits},
+booktitle   = {AIAA SCITECH 2025 Forum},
+year        = {2025},
+month       = {jan},
+bibtex_show={true},
+abbr=conf,
+chapter     = {},
+pages       = {},
+doi         = {10.2514/6.2025-2265},
+html      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-2265},
+selected={false},
+url         = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-2265},
+eprint      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-2265},
+preview     = {}
+}
+
+@article{Autenrieb2024-ijrnc,
+title     = {Complementary Filter‐Based Incremental Nonlinear Model Following Control Design for a Tilt‐Wing UAV},
+author    = {Autenrieb, Johannes and Shin, Hyo‐Sang},
+journal   = {International Journal of Robust and Nonlinear Control},
+publisher = {John Wiley & Sons, Inc.},
+bibtex_show={true},
+abbr=jour,
+html    = {https://onlinelibrary.wiley.com/doi/10.1002/rnc.7743},
+pages     = {},
+month     = {dec},
+year      = {2024},
+doi       = {10.1002/rnc.7743},
+selected={true},
+eprint    = {https://onlinelibrary.wiley.com/doi/10.1002/rnc.7743},
+url= {https://onlinelibrary.wiley.com/doi/10.1002/rnc.7743},
+preview   = {}
+}
+
 @article{autenrieb2024-ax,
   title={Sensor-Based Safety-Critical Control using an Incremental Control Barrier Function Formulation via Reduced-Order Approximate Models}, 
   author={Johannes Autenrieb and Hyo-Sang Shin},
