--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@ chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2025-1908},
 html      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-1908},
-selected={false},
+selected={true},
 url         = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-1908},
 eprint      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-1908},
 preview     = {}
@@ -32,7 +32,7 @@ chapter     = {},
 pages       = {},
 doi         = {10.2514/6.2025-2265},
 html      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-2265},
-selected={false},
+selected={true},
 url         = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-2265},
 eprint      = {https://arc.aiaa.org/doi/abs/10.2514/6.2025-2265},
 preview     = {}
