--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,19 @@
 @string{jour={Journal}}
 @string{pre={Pre-print}}
 
+@article{autenrieb2025-ax1,
+  title={A Quadratic Programming Approach to Flight Envelope Protection Using Control Barrier Functions}, 
+  author={Johannes Autenrieb},
+  journal={arXiv:2504.18951 [eess.SY]},
+  year={2025},
+  month     = {apr},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2410.08096},
+  url= {https://arxiv.org/abs/2504.18951},
+  selected={true}
+}
+
 @INPROCEEDINGS{Autenrieb2025-st2,
 author      = {Autenrieb, Johannes and Gruhn, Patrick},
 title       = {A Quasi-LPV Approach for Gain Scheduling Cascaded NDI-Based Controllers for Hypersonic Glide Vehicles},
