--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,16 +15,17 @@
   selected={true}
 }
 
-@article{autenrieb2024-ax,
+@INPROCEEDINGS{autenrieb2024-ax,
   title={Sensor-Based Safety-Critical Control using an Incremental Control Barrier Function Formulation via Reduced-Order Approximate Models}, 
+  booktitle={2025 American Control Conference (ACC)}, 
   author={Johannes Autenrieb and Hyo-Sang Shin},
-  journal={arXiv:2410.08096 [eess.SY]},
   year={2025},
-  month     = {mar},
-  abbr=pre,
+  month     = {jul},
+  abbr=conf,
   bibtex_show={true},
-  arxiv={2410.08096},
-  url= {https://arxiv.org/abs/2410.08096},
+  pages={374-381},
+  url= {https://ieeexplore.ieee.org/document/11107913},
+  doi={10.23919/ACC63710.2025.11107913}},
   selected={true}
 }
 
