--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
   bibtex_show={true},
   pages={374-381},
   url= {https://ieeexplore.ieee.org/document/11107913},
-  doi={10.23919/ACC63710.2025.11107913}},
+  doi={10.23919/ACC63710.2025.11107913},
   selected={true}
 }
 
