--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,16 @@
 @string{conf={Conference}}
 @string{jour={Journal}}
-@string{pre={Pre-print}}
+@string{pre={Preprint}}
 
 @article{autenrieb2025-ax1,
-  title={A Quadratic Programming Approach to Flight Envelope Protection Using Control Barrier Functions}, 
+  title={Quadratic Programming Approach to Flight Envelope Protection Using Control Barrier Functions}, 
   author={Johannes Autenrieb},
-  journal={arXiv:2504.18951 [eess.SY]},
+  journal={Journal of Guidance, Control, and Dynamics},
   year={2025},
-  month     = {apr},
-  abbr=pre,
+  month     = {sep},
+  abbr=jour,
   bibtex_show={true},
-  arxiv={2410.08096},
-  url= {https://arxiv.org/abs/2504.18951},
+  url= {https://arc.aiaa.org/doi/10.2514/1.G009203},
   selected={true}
 }
 
