--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,45 @@
 @string{jour={Journal}}
 @string{pre={Preprint}}
 
+@article{autenrieb2025-ax4,
+  title={Auction-Based Responsibility Allocation for Scalable Decentralized Safety Filters in Cooperative Multi-Agent Collision Avoidance}, 
+  author={Johannes Autenrieb and Mark Spiller},
+  journal={arXiv:2510.21546 [eess.SY]},
+  year={2025},
+  month     = {oct},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2510.21546},
+  url= {https://arxiv.org/abs/2510.21546},
+  selected={true}
+}
+
+@article{autenrieb2025-ax3,
+  title={A Control Allocation Algorithm for Hypersonic Glide Vehicles with Input Limitations}, 
+  author={Johannes Autenrieb and Patrick Gruhn},
+  journal={arXiv:2510.08275 [eess.SY]},
+  year={2025},
+  month     = {oct},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2510.08275},
+  url= {https://arxiv.org/abs/2510.08275},
+  selected={true}
+}
+
+@article{autenrieb2025-ax2,
+  title={Decentralized CBF-based Safety Filters for Collision Avoidance of Cooperative Missile Systems with Input Constraints}, 
+  author={Johannes Autenrieb and Mark Spiller},
+  journal={arXiv:2510.06846 [eess.SY]},
+  year={2025},
+  month     = {oct},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2510.06846},
+  url= {https://arxiv.org/abs/2510.06846},
+  selected={true}
+}
+
 @article{autenrieb2025-ax1,
   title={Quadratic Programming Approach to Flight Envelope Protection Using Control Barrier Functions}, 
   author={Johannes Autenrieb},
