--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @string{conf={Conference}}
 @string{jour={Journal}}
-@string{pre={Preprint}}
+@string{pre={Pre-print}}
 
 @article{autenrieb2025-ax4,
   title={Auction-Based Responsibility Allocation for Scalable Decentralized Safety Filters in Cooperative Multi-Agent Collision Avoidance}, 
