--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,20 @@
 @string{jour={Journal}}
 @string{pre={Pre-print}}
 
+@article{autenrieb2025-ax5,
+  title={An Error-Based Safety Buffer for Safe Adaptive Contro}, 
+  author={Peter A. Fisher, Johannes Autenrieb, and Anuradha M. Annaswamy},
+  journal={arXiv:2510.23491 [eess.SY]},
+  year={2025},
+  month     = {oct},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2510.23491},
+  url= {https://arxiv.org/abs/2510.23491},
+  selected={true}
+}
+
+
 @article{autenrieb2025-ax4,
   title={Auction-Based Responsibility Allocation for Scalable Decentralized Safety Filters in Cooperative Multi-Agent Collision Avoidance}, 
   author={Johannes Autenrieb and Mark Spiller},
