--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 @string{pre={Pre-print}}
 
 @article{autenrieb2025-ax5,
-  title={An Error-Based Safety Buffer for Safe Adaptive Contro}, 
+  title={An Error-Based Safety Buffer for Safe Adaptive Control}, 
   author={Peter A. Fisher, Johannes Autenrieb, and Anuradha M. Annaswamy},
   journal={arXiv:2510.23491 [eess.SY]},
   year={2025},
