--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 @article{autenrieb2025-ax5,
   title={An Error-Based Safety Buffer for Safe Adaptive Control}, 
-  author={Peter A. Fisher, Johannes Autenrieb, and Anuradha M. Annaswamy},
+  author={Fisher, Peter A. and Autenrieb, Johannes and Annaswamy, Anuradha M. },
   journal={arXiv:2510.23491 [eess.SY]},
   year={2025},
   month     = {oct},
