--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,19 @@
 @string{jour={Journal}}
 @string{pre={Pre-print}}
 
+@article{autenrieb2025-ax6,
+  title={Generalized Intelligence for Tactical Decision-Making: Large Language Model-Driven Dynamic Weapon Target Assignment}, 
+  author={Autenrieb, Johannes and Ostermann, Ole},
+  journal={arXiv:2511.10207 [eess.SY]},
+  year={2025},
+  month     = {nov},
+  abbr=pre,
+  bibtex_show={true},
+  arxiv={2511.10207},
+  url= {https://arxiv.org/abs/2511.10207},
+  selected={true}
+}
+
 @article{autenrieb2025-ax5,
   title={An Error-Based Safety Buffer for Safe Adaptive Control}, 
   author={Fisher, Peter A. and Autenrieb, Johannes and Annaswamy, Anuradha M. },
